language_tests/outputs/invalid/computed_properties.out
error: use of moved value 'mv'
 -> language_tests/source_files/invalid/computed_properties.tr:18:12
	    let _ = mv
	            ^^
